@@ -226,3 +226,8 @@ testno 37
 battlestar/battlestar <tests/battlestar.in37 >test.out 2>&1 || failtest
 compare test.out tests/battlestar.out37
 rm -f test.out
+
+testno 38
+battlestar/battlestar <tests/battlestar.in38 >test.out 2>&1 || failtest
+compare test.out tests/battlestar.out38
+rm -f test.out
